name string overhaul

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -24,80 +24,103 @@ STR_ERROR_JAPANSETTRAINS	:JapanSet 3 Trains
 STR_ERROR_JPPLUSSET			:Must be loaded after JP+ Set!
 
 
-STR_NAME_JGR_7100	:7100 1-C 
-STR_NAME_JGR_7200	:7200 1-C 
-STR_NAME_JGR_860	:860 1-B-1 
-STR_NAME_JGR_7050	:7050 C-1 
+STR_NAME_7100	    :7100 1-C 
+STR_NAME_7200	    :7200 1-C 
+STR_NAME_860	    :860 1-B-1 
+STR_NAME_7050	    :7050 C-1 
 
+STR_NAME_DF50	    :DF50
+STR_NAME_DD13	    :DD13 
+STR_NAME_DD16	    :DD16 
+STR_NAME_DD54	    :DD54 
+STR_NAME_DE10       :DE10
+STR_NAME_DD51       :DD51
+STR_NAME_DF200      :DF200
+STR_NAME_HD300      :HD300
 
-STR_NAME_JNR_DD13	:DD13 
-STR_NAME_JNR_DD16	:DD16 
-STR_NAME_JNR_DD54	:DD54 
-STR_NAME_JNR_AB10	:AB10 
-STR_NAME_JNR_EB10	:EB10 
-STR_NAME_JNR_EF10_2	:EF10 New type 
-STR_NAME_JNR_EF13_2	:EF13 New type 
-STR_NAME_JNR_EF15	:EF15 
-STR_NAME_JNR_EF30	:EF30 
+STR_NAME_AB10	:AB10 
+STR_NAME_EB10	:EB10 
+STR_NAME_ED12	:ED12 
+STR_NAME_ED16	:ED16 
+STR_NAME_ED17	:ED17
+STR_NAME_ED19	:ED19 
+STR_NAME_ED50	:ED50 
+STR_NAME_ED53	:ED53 
+STR_NAME_ED54	:ED54 
 
-STR_NAME_JNR_EF70	:EF70 
-STR_NAME_JNR_EF80	:EF80 
-STR_NAME_JNR_ED12	:ED12 
-STR_NAME_JNR_ED16	:ED16 
-STR_NAME_JNR_ED19	:ED19 
-STR_NAME_JNR_ED50	:ED50 
-STR_NAME_JNR_ED53	:ED53 
-STR_NAME_JNR_ED54	:ED54 
-STR_NAME_JNR_ED60	:ED60 
-STR_NAME_JNR_ED61	:ED61 
-STR_NAME_JNR_ED62	:ED62 
-STR_NAME_JNR_ED70	:ED70 
-STR_NAME_JNR_ED75	:ED75 
-STR_NAME_JNR_ED75_2	:ED75-700 
-STR_NAME_JNR_ED76	:ED76 
-STR_NAME_JNR_ED79	:ED79 
-STR_NAME_JGR_EF50	:EF50 
-STR_NAME_JNR_EF53	:EF53 
-STR_NAME_JNR_EF56	:EF56 
-STR_NAME_JNR_EF57	:EF57 
-STR_NAME_JNR_EF57_2	:EF57 Prototype 
-STR_NAME_JNR_EF58_2	:EF58 Old type 
-STR_NAME_JNR_EF18	:EF18 
-STR_NAME_JNR_EF59	:EF59 Banker 
-STR_NAME_JNR_EF60_0	:EF60 Protoype 
-STR_NAME_JNR_EF60_1	:EF60 
-STR_NAME_JNR_EF60_2	:EF60 New type 
-STR_NAME_JNR_EF63	:EF63 
-STR_NAME_JNR_EF64_1	:EF64-0 
-STR_NAME_JNR_EF64_2	:EF64-1000 
-STR_NAME_JNR_EF65_1	:EF65-0 
-STR_NAME_JNR_EF65_2	:EF65-500 
-STR_NAME_JNR_EF65_3	:EF65-1000 
-STR_NAME_JNR_EF66_1	:EF66-0 
-STR_NAME_JNR_EF66_2	:EF66-100 
-STR_NAME_JNR_EF67_1	:EF67-0 Banker 
-STR_NAME_JNR_EF67_2	:EF67-100 Banker 
-STR_NAME_JNR_EF81	:EF81 
-STR_NAME_JNR_EF81_1	:EF81-300 
-STR_NAME_JNR_EF81_2	:EF81-450 
-STR_NAME_JNR_EH10	:EH10 
-STR_NAME_JNR_EH10_2	:EH10 Prototype 
-STR_NAME_JNR_EH50	:EH50 
+STR_NAME_EF10	:EF10 
+STR_NAME_EF10_2	:EF10 New type 
+STR_NAME_EF13	:EF13
+STR_NAME_EF13_2	:EF13 New type 
+STR_NAME_EF15	:EF15 
+STR_NAME_EF18	:EF18 
 
-STR_NAME_JR_DF200	:DF200 
-STR_NAME_JR_EF210	:EF210-0 
-STR_NAME_JR_EF210_1	:EF210-100 
-STR_NAME_JR_EF210_2	:EF210-300 Banker 
-STR_NAME_JR_EF500	:EF500 
-STR_NAME_JR_ED500	:ED500 
-STR_NAME_JR_EH800	:EH800 
-STR_NAME_JR_M250	:M250 Cargo EMU 
+STR_NAME_EF50	:EF50 
+STR_NAME_EF53	:EF53 
+STR_NAME_EF55	:EF55 
+STR_NAME_EF56	:EF56 
+STR_NAME_EF57	:EF57 
+STR_NAME_EF57_2	:EF57 Prototype 
+STR_NAME_EF58	:EF58 
+STR_NAME_EF58_2	:EF58 Old type 
+STR_NAME_EF59	:EF59 Banker 
+
+STR_NAME_EH10	:EH10 
+STR_NAME_EH10_2	:EH10 Prototype 
+STR_NAME_EH50	:EH50 
+
+STR_NAME_ED60	:ED60 
+STR_NAME_ED61	:ED61 
+STR_NAME_ED62	:ED62 
+
+STR_NAME_EF60_0	:EF60 Protoype 
+STR_NAME_EF60_1	:EF60 
+STR_NAME_EF60_2	:EF60 New type 
+STR_NAME_EF62	:EF62
+STR_NAME_EF63	:EF63 
+STR_NAME_EF64_1	:EF64-0 
+STR_NAME_EF64_2	:EF64-1000 
+STR_NAME_EF65_1	:EF65-0 
+STR_NAME_EF65_2	:EF65-500 
+STR_NAME_EF65_3	:EF65-1000 
+STR_NAME_EF66_1	:EF66-0 
+STR_NAME_EF66_2	:EF66-100 
+STR_NAME_EF67_1	:EF67-0 Banker 
+STR_NAME_EF67_2	:EF67-100 Banker 
+
+STR_NAME_EF30	:EF30 
+STR_NAME_EF80	:EF80 
+STR_NAME_EF81	:EF81 
+STR_NAME_EF81_1	:EF81-300 
+STR_NAME_EF81_2	:EF81-450 
+
+STR_NAME_ED70	:ED70 
+STR_NAME_ED75	:ED75 
+STR_NAME_ED75_2	:ED75-700 
+STR_NAME_ED76	:ED76 
+STR_NAME_ED79	:ED79 
+STR_NAME_EF70	:EF70 
+
+STR_NAME_EF200	    :EF200 
+STR_NAME_EF210	    :EF210-0 
+STR_NAME_EF210_1	:EF210-100 
+STR_NAME_EF210_2	:EF210-300 Banker 
+STR_NAME_EH200  	:EH200
+
+STR_NAME_ED500	    :ED500 
+STR_NAME_EF500	    :EF500 
+STR_NAME_EF510	    :EF510
+STR_NAME_EH500_1	:EH500 Prototype
+STR_NAME_EH500_2	:EH500 Old type
+STR_NAME_EH500  	:EH500 
+STR_NAME_EH800	    :EH800 
+STR_NAME_M250	    :M250 Cargo EMU 
 
 STR_NAME_DEKI_400	:DeKi 400 
 STR_NAME_EL120		:EL120 
-STR_NAME_SEIBU_E851	:E851 
-STR_NAME_SEIBU_E31	:E31 
-STR_NAME_SEIBU_E51	:E51 
+STR_NAME_E851	    :E851 
+STR_NAME_E31	    :E31 
+STR_NAME_E51	    :E51 
 
 STR_NAME_PAX_HA4995		:HA 4995 Passenger Coach
 STR_NAME_PAX_FUKOHA7945	:FUKOHA 7945 Passenger Coach
