Final wave variantification AC
and other gfx tweaks

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -89,6 +89,7 @@ STR_NAME_EF67_1	:EF67-0 Banker
 STR_NAME_EF67_2	:EF67-100 Banker 
 
 STR_NAME_EF30	:EF30 
+STR_NAME_EF30_1	:EF30 Prototype
 STR_NAME_EF80	:EF80 
 STR_NAME_EF81	:EF81 
 STR_NAME_EF81_1	:EF81-300 
@@ -98,8 +99,11 @@ STR_NAME_ED70	:ED70
 STR_NAME_ED75	:ED75 
 STR_NAME_ED75_2	:ED75-700 
 STR_NAME_ED76	:ED76 
+STR_NAME_ED76_1	:ED76-500
+STR_NAME_ED76_2	:ED76-550
 STR_NAME_ED79	:ED79 
 STR_NAME_EF70	:EF70 
+STR_NAME_EF70_1	:EF70 Old type
 
 STR_NAME_EF200	    :EF200 
 STR_NAME_EF210	    :EF210-0 
@@ -109,9 +113,11 @@ STR_NAME_EH200  	:EH200
 
 STR_NAME_ED500	    :ED500 
 STR_NAME_EF500	    :EF500 
-STR_NAME_EF510	    :EF510
-STR_NAME_EH500_1	:EH500 Prototype
-STR_NAME_EH500_2	:EH500 Old type
+STR_NAME_EF510	    :EF510-0
+STR_NAME_EF510_5	:EF510-500
+STR_NAME_EF510_3	:EF510-300
+STR_NAME_EH500_P	:EH500 Prototype
+STR_NAME_EH500_1	:EH500 Old type
 STR_NAME_EH500  	:EH500 
 STR_NAME_EH800	    :EH800 
 STR_NAME_M250	    :M250 Cargo EMU 
@@ -454,8 +460,10 @@ STR_SUFFIX_RANDOM	:{GREEN}Random{BLACK}
 
 STR_SUFFIX_EXP      :{GOLD}Experimental
 STR_SUFFIX_LOGO     :{GOLD}Large Logo
+
 STR_SUFFIX_STRIPE   :{GOLD}Stripe
 STR_SUFFIX_WHISKERS :{GOLD}Whiskers
+STR_SUFFIX_2TONE    :{GOLD}Two-Tone
 
 STR_SUFFIX_IMPERIAL      :{GOLD}"Imperial Train"{BLACK}
 STR_SUFFIX_EXPRESS       :{GOLD}"Express"{BLACK}
@@ -468,9 +476,12 @@ STR_SUFFIX_TWILIGHT      :{GOLD}"Twilight Express"{BLACK}
 STR_SUFFIX_HOKUTOSEI     :{GOLD}"Hokutosei"{BLACK}
 STR_SUFFIX_CASSIOPEIA    :{GOLD}"Cassiopeia"{BLACK}
 STR_SUFFIX_AKEBONO       :{GOLD}"Akebono Orient Saloon"{BLACK}
+STR_SUFFIX_SOUTHERNCROSS :{GOLD}"Southern Cross"{BLACK}
 
 STR_SUFFIX_PANDA         :{GOLD}"Panda"{BLACK}
 STR_SUFFIX_MOMOTARO      :{GOLD}"Momotaro"{BLACK}
+STR_SUFFIX_KINTARO       :{GOLD}"Kintaro"{BLACK}
+STR_SUFFIX_REDTHUNDER    :{GOLD}"Red Thunder"{BLACK}
 
 
 STR_REFIT_YEARDEP	: {GREEN}Year-Dependent{BLACK}
@@ -487,15 +498,19 @@ STR_REFIT_YEARFORM	: {GREEN}Auto-Formation, Year-Dependent{BLACK}
 
 STR_SUFFIX_AIRCON	:{SILVER}(Air Conditioned)
 STR_SUFFIX_ORIGINAL	:{SILVER}(Original)
+STR_SUFFIX_PROTO	:{SILVER}(Prototype)
 STR_SUFFIX_PANTOS	:{SILVER}(New Pantographs)
+STR_SUFFIX_LIGHTS	:{SILVER}(New Headlights)
 STR_SUFFIX_UPGRADE	:{SILVER}(Upgraded)
 STR_SUFFIX_OLDSHAPE	:{SILVER}(Old Shape)
 STR_SUFFIX_NEWSHAPE	:{SILVER}(New Shape)
 STR_SUFFIX_REFURB	:{SILVER}(Refurbished)
+STR_SUFFIX_NOLOGO   :{SILVER}(No Logo)
 
 #################
 #COLOUR SUFFIXES#
 #################
+STR_SUFFIX_WHITE			:{WHITE}White
 STR_SUFFIX_BLACK			:{BLACK}Black
 STR_SUFFIX_BLACK_YELLOW		:{BLACK}Black/Yellow
 STR_SUFFIX_SILVER			:{SILVER}Silver
@@ -518,6 +533,7 @@ STR_SUFFIX_BLUE_CREAM		:{BLUE}Blue/Cream
 STR_SUFFIX_BLUE_2TONE		:{BLUE}Two-Tone Blue
 STR_SUFFIX_RED				:{RED}Red
 STR_SUFFIX_RED_GOLD			:{RED}Red/Gold
+STR_SUFFIX_RED_SILVER		:{RED}Red/Silver
 STR_SUFFIX_RED_WHITE		:{RED}Red/White
 STR_SUFFIX_RED_GREY  		:{RED}Red/Grey
 STR_SUFFIX_RED_CREAM		:{RED}Red/Cream
