EF65 variant name

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -80,6 +80,8 @@ STR_NAME_EF62	:EF62
 STR_NAME_EF63	:EF63 
 STR_NAME_EF64_1	:EF64-0 
 STR_NAME_EF64_2	:EF64-1000 
+
+STR_NAME_EF65   :EF65
 STR_NAME_EF65_1	:EF65-0 
 STR_NAME_EF65_2	:EF65-500 
 STR_NAME_EF65_3	:EF65-1000 
