removed name code pending fix

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -85,8 +85,12 @@ STR_NAME_EF65   :EF65
 STR_NAME_EF65_1	:EF65-0 
 STR_NAME_EF65_2	:EF65-500 
 STR_NAME_EF65_3	:EF65-1000 
+
+STR_NAME_EF66	:EF66
 STR_NAME_EF66_1	:EF66-0 
 STR_NAME_EF66_2	:EF66-100 
+
+STR_NAME_EF67	:EF67
 STR_NAME_EF67_1	:EF67-0 Banker 
 STR_NAME_EF67_2	:EF67-100 Banker 
 
@@ -106,21 +110,25 @@ STR_NAME_ED76_2	:ED76-550
 STR_NAME_ED79	:ED79 
 STR_NAME_EF70	:EF70 
 STR_NAME_EF70_1	:EF70 Old type
+STR_NAME_EF70_2	:EF70 New type
 
 STR_NAME_EF200	    :EF200 
-STR_NAME_EF210	    :EF210-0 
+STR_NAME_EF210	    :EF210
+STR_NAME_EF210_0	:EF210-0 
 STR_NAME_EF210_1	:EF210-100 
 STR_NAME_EF210_2	:EF210-300 Banker 
 STR_NAME_EH200  	:EH200
 
 STR_NAME_ED500	    :ED500 
 STR_NAME_EF500	    :EF500 
-STR_NAME_EF510	    :EF510-0
+STR_NAME_EF510	    :EF510
+STR_NAME_EF510_0	:EF510-0
 STR_NAME_EF510_5	:EF510-500
 STR_NAME_EF510_3	:EF510-300
+STR_NAME_EH500  	:EH500 
 STR_NAME_EH500_P	:EH500 Prototype
 STR_NAME_EH500_1	:EH500 Old type
-STR_NAME_EH500  	:EH500 
+STR_NAME_EH500_2	:EH500 New type
 STR_NAME_EH800	    :EH800 
 STR_NAME_M250	    :M250 Cargo EMU 
 
