engine var name updates

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -49,8 +49,10 @@ STR_NAME_ED53	:ED53
 STR_NAME_ED54	:ED54 
 
 STR_NAME_EF10	:EF10 
+STR_NAME_EF10_1	:EF10 Old type 
 STR_NAME_EF10_2	:EF10 New type 
 STR_NAME_EF13	:EF13
+STR_NAME_EF13_1	:EF13 Old type 
 STR_NAME_EF13_2	:EF13 New type 
 STR_NAME_EF15	:EF15 
 STR_NAME_EF18	:EF18 
@@ -62,8 +64,12 @@ STR_NAME_EF56	:EF56
 STR_NAME_EF57	:EF57 
 STR_NAME_EF57_2	:EF57 Prototype 
 STR_NAME_EF58	:EF58 
-STR_NAME_EF58_2	:EF58 Old type 
-STR_NAME_EF59	:EF59 Banker 
+STR_NAME_EF58_1 :EF58 New type
+STR_NAME_EF58_2	:EF58 Old type
+
+STR_NAME_EF59	:EF59 
+STR_NAME_EF59_1	:EF59-1 Banker 
+STR_NAME_EF59_2	:EF59-20 Banker 
 
 STR_NAME_EH10	:EH10 
 STR_NAME_EH10_2	:EH10 Prototype 
@@ -73,11 +79,13 @@ STR_NAME_ED60	:ED60
 STR_NAME_ED61	:ED61 
 STR_NAME_ED62	:ED62 
 
+STR_NAME_EF60   :EF60
 STR_NAME_EF60_0	:EF60 Protoype 
-STR_NAME_EF60_1	:EF60 
+STR_NAME_EF60_1	:EF60 Old type
 STR_NAME_EF60_2	:EF60 New type 
 STR_NAME_EF62	:EF62
 STR_NAME_EF63	:EF63 
+STR_NAME_EF64	:EF64
 STR_NAME_EF64_1	:EF64-0 
 STR_NAME_EF64_2	:EF64-1000 
 
@@ -98,13 +106,17 @@ STR_NAME_EF30	:EF30
 STR_NAME_EF30_1	:EF30 Prototype
 STR_NAME_EF80	:EF80 
 STR_NAME_EF81	:EF81 
+STR_NAME_EF81_0	:EF81-0
 STR_NAME_EF81_1	:EF81-300 
 STR_NAME_EF81_2	:EF81-450 
 
 STR_NAME_ED70	:ED70 
 STR_NAME_ED75	:ED75 
+STR_NAME_ED75_0	:ED75-0
+STR_NAME_ED75_1	:ED75-0 / -1000
 STR_NAME_ED75_2	:ED75-700 
 STR_NAME_ED76	:ED76 
+STR_NAME_ED76_0	:ED76-0 / -1000
 STR_NAME_ED76_1	:ED76-500
 STR_NAME_ED76_2	:ED76-550
 STR_NAME_ED79	:ED79 
