--- a/lang/english.lng
+++ b/lang/english.lng
@@ -793,17 +793,46 @@ STR_DESC_USAGE_PAX_LEX	:{BLACK}Usage: {SILVER}Luxury Express{}
 STR_DESC_USAGE_PAX_LUX	:{BLACK}Usage: {SILVER}Luxury Sleeper{}
 STR_DESC_USAGE_PAX_JOY	:{BLACK}Usage: {SILVER}Luxury Charters / Excursions{}
 
+STR_DESC_USAGE_PAX_TOKAIDO	:{BLACK}Usage: {SILVER}Express Trains - {GREEN}Use with EF58 New Type, Tokaido Livery{}
+
 STR_DESC_USAGE_MAIL_LUG	:{BLACK}Usage: {SILVER}Luggage / Mail{}
 STR_DESC_USAGE_MAIL_RPO	:{BLACK}Usage: {SILVER}Travelling Post Office{}
 STR_DESC_USAGE_MAIL_EXP	:{BLACK}Usage: {SILVER}Luggage / Mail /  Express Cargo{}
 STR_DESC_USAGE_MAIL_EXF	:{BLACK}Usage: {SILVER}Mail / Express Cargo{}
 STR_DESC_USAGE_MAIL_VAL	:{BLACK}Usage: {SILVER}Valuables / Express Cargo{}
 
-STR_DESC_USAGE_FRT_STEL	:{BLACK}Usage: {SILVER}Steelworks Transport{}
-STR_DESC_USAGE_FRT_HVY	:{BLACK}Usage: {SILVER}Oversized Heavy Cargo{}
+STR_DESC_USAGE_FRT_STEL	:{BLACK}Usage: {SILVER}Metal Products - Coils / Bars / Slabs{}
+STR_DESC_USAGE_FRT_HVY	:{BLACK}Usage: {SILVER}Oversized Heavy Cargo - Transformers{}
+STR_DESC_USAGE_FRT_CAR	:{BLACK}Usage: {SILVER}Vehicles - Car Transport{}
+STR_DESC_USAGE_FRT_CARR	:{BLACK}Usage: {SILVER}Vehicles / General Cargo - Containers{}
+STR_DESC_USAGE_FRT_DMT	:{BLACK}Usage: {SILVER}Express Cargo - Truck Trailers{}
+
+STR_DESC_USAGE_FRT_CONT	:{BLACK}Usage: {SILVER}General / Express Cargo - Containers{}
+STR_DESC_USAGE_FRT_BOX	:{BLACK}Usage: {SILVER}General / Express Cargo{}
+STR_DESC_USAGE_FRT_FLAT	:{BLACK}Usage: {SILVER}General / Long Cargo{}
+STR_DESC_USAGE_FRT_EXP	:{BLACK}Usage: {SILVER}Express Cargo{}
+STR_DESC_USAGE_FRT_LVST	:{BLACK}Usage: {SILVER}Livestock - {GREEN}Reduced cargo aging{}
+STR_DESC_USAGE_FRT_REEF	:{BLACK}Usage: {SILVER}Refrigerated Cargo - {GREEN}Reduced cargo aging{}
+STR_DESC_USAGE_FRT_OPEN	:{BLACK}Usage: {SILVER}General / Bulk Cargo{}
+STR_DESC_USAGE_FRT_BULK	:{BLACK}Usage: {SILVER}Bulk Cargo{}
+STR_DESC_USAGE_FRT_COV	:{BLACK}Usage: {SILVER}Powdered Bulk Cargo{}
+
+STR_DESC_USAGE_FRT_COAL	:{BLACK}Usage: {SILVER}Bulk Cargo - Coal{}
+STR_DESC_USAGE_FRT_STON	:{BLACK}Usage: {SILVER}Bulk Cargo - Ballast{}
+STR_DESC_USAGE_FRT_LMST	:{BLACK}Usage: {SILVER}Bulk Cargo - Limestone{}
+STR_DESC_USAGE_FRT_CMNT	:{BLACK}Usage: {SILVER}Powdered Bulk Cargo - Cement{}
+STR_DESC_USAGE_FRT_QLME	:{BLACK}Usage: {SILVER}Powdered Bulk Cargo - Quicklime{}
+STR_DESC_USAGE_FRT_GRAI	:{BLACK}Usage: {SILVER}Powdered Bulk Cargo - Grain{}
+STR_DESC_USAGE_FRT_CHIP	:{BLACK}Usage: {SILVER}Lightweight Bulk Cargo - Fibres / Woodchips{}
+
+STR_DESC_USAGE_FRT_TANK	:{BLACK}Usage: {SILVER}General Liquid Cargo{}
+STR_DESC_USAGE_FRT_OIL	:{BLACK}Usage: {SILVER}General Liquid Cargo - Fuel / Oil{}
+STR_DESC_USAGE_FRT_CHEM	:{BLACK}Usage: {SILVER}Hazardous Liquid Cargo - Acid / Chlorine{}
+STR_DESC_USAGE_FRT_GAS	:{BLACK}Usage: {SILVER}Gaseous Cargo - Ammonia / LPG{}
+
+STR_DESC_USAGE_FRT_T260	:{BLACK}Usage: {SILVER}Express Cargo - {GREEN}Use with M250 Cargo EMU{}
 
 STR_DESC_BRAKE		:{BLACK}Usage: {SILVER}Brake Van - {GREEN}Attach behind slower freight wagons to increase speed limit{}
 
 STR_DESC_BRAKE_NA	:{BLACK}Brake Van Speed Boost: {RED}Not Available{}
-
 
