American secret liveries

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -477,6 +477,10 @@ STR_SUFFIX_NIPPON       :{WHITE} Nippon Express
 STR_SUFFIX_TOSHIBA      :{WHITE} Toshiba Logistics
 STR_SUFFIX_YAWATA       :{WHITE} Yawata Works / Nippon Steel
 
+STR_SUFFIX_GNR          :{WHITE} Great Northern Railway
+STR_SUFFIX_NYC          :{WHITE} New York Central
+STR_SUFFIX_AMTRAK       :{WHITE} Amtrak
+
 #####################
 #NEW MODULAR STRINGS#
 #####################
@@ -503,6 +507,8 @@ STR_SUFFIX_HOKUTOSEI     :{GOLD}"Hokutosei"{BLACK}
 STR_SUFFIX_CASSIOPEIA    :{GOLD}"Cassiopeia"{BLACK}
 STR_SUFFIX_AKEBONO       :{GOLD}"Akebono Orient Saloon"{BLACK}
 STR_SUFFIX_SOUTHERNCROSS :{GOLD}"Southern Cross"{BLACK}
+STR_SUFFIX_AMERICANTRAIN :{GOLD}"American Train"{BLACK}
+STR_SUFFIX_YASURAGI      :{GOLD}"Yasuragi"{BLACK}
 
 STR_SUFFIX_PANDA         :{GOLD}"Panda"{BLACK}
 STR_SUFFIX_MOMOTARO      :{GOLD}"Momotaro"{BLACK}
@@ -532,6 +538,8 @@ STR_SUFFIX_OLDSHAPE	:{SILVER}(Old Shape)
 STR_SUFFIX_NEWSHAPE	:{SILVER}(New Shape)
 STR_SUFFIX_REFURB	:{SILVER}(Refurbished)
 STR_SUFFIX_NOLOGO   :{SILVER}(No Logo)
+STR_SUFFIX_SEMIFIC  :{SILVER}(Semi-Fictional)
+STR_SUFFIX_FICTION  :{SILVER}(Fictional)
 
 #################
 #COLOUR SUFFIXES#
@@ -566,6 +574,7 @@ STR_SUFFIX_RED_CREAM		:{RED}Red/Cream
 STR_SUFFIX_RED_BLACK        :{RED}Red/Black
 STR_SUFFIX_ORANGE			:{ORANGE}Orange
 STR_SUFFIX_PINK 			:{CREAM}Pink
+STR_SUFFIX_RED_WHITE_BLUE   :{RED}Red/{WHITE}White/{BLUE}Blue
 STR_SUFFIX_CC				:{GREEN}Company Coloured
 
 
@@ -703,9 +712,7 @@ STR_REFIT_EF58_EXP_ORANGE	: {WHITE}JNR {BLACK}Experimental Blue/Orange
 STR_REFIT_EF58_EXP_GREEN	: {WHITE}JNR {BLACK}Experimental Green
 STR_REFIT_EF58_EXP_YELLOW	: {WHITE}JNR {BLACK}Experimental Blue/Yellow
 
-STR_REFIT_EF60_NEW		: {SILVER}EF60{WHITE} JNR{BLACK} Blue {GOLD}(New Shape)
-STR_REFIT_EF60_AMERICAN	: {SILVER}EF60{WHITE} JR East{BLACK} "American Train"
-STR_REFIT_EF60_YASURAGI	: {SILVER}EF60{WHITE} JR East{BLACK} "Yasuragi"
+
 
 STR_REFIT_EF64_0        : {SILVER}EF64-0
 STR_REFIT_EF64_1000     : {SILVER}EF64-1000
