ef71 ef62 ed46 ed60 coded

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -87,6 +87,7 @@ STR_NAME_EF60_0	:EF60 Protoype
 STR_NAME_EF60_1	:EF60 Old type
 STR_NAME_EF60_2	:EF60 New type 
 STR_NAME_EF62	:EF62
+STR_NAME_EF62_0	:EF62 Prototype
 STR_NAME_EF63	:EF63 
 STR_NAME_EF64	:EF64
 STR_NAME_EF64_1	:EF64-0 
@@ -105,6 +106,7 @@ STR_NAME_EF67	:EF67
 STR_NAME_EF67_1	:EF67-0 Banker 
 STR_NAME_EF67_2	:EF67-100 Banker 
 
+STR_NAME_ED46   :ED46
 STR_NAME_EF30	:EF30 
 STR_NAME_EF30_1	:EF30 Prototype
 STR_NAME_EF80	:EF80 
@@ -126,6 +128,7 @@ STR_NAME_ED79	:ED79
 STR_NAME_EF70	:EF70 
 STR_NAME_EF70_1	:EF70 Old type
 STR_NAME_EF70_2	:EF70 New type
+STR_NAME_EF71	:EF71
 
 STR_NAME_EF200	    :EF200 
 STR_NAME_EF210	    :EF210
@@ -514,6 +517,7 @@ STR_SUFFIX_PANDA         :{GOLD}"Panda"{BLACK}
 STR_SUFFIX_MOMOTARO      :{GOLD}"Momotaro"{BLACK}
 STR_SUFFIX_KINTARO       :{GOLD}"Kintaro"{BLACK}
 STR_SUFFIX_REDTHUNDER    :{GOLD}"Red Thunder"{BLACK}
+STR_SUFFIX_HAMAMATSU      :{GOLD}"Hamamatsu Depot"{BLACK}
 
 
 STR_REFIT_YEARDEP	: {GREEN}Year-Dependent{BLACK}
@@ -573,7 +577,7 @@ STR_SUFFIX_RED_GREY  		:{RED}Red/Grey
 STR_SUFFIX_RED_CREAM		:{RED}Red/Cream
 STR_SUFFIX_RED_BLACK        :{RED}Red/Black
 STR_SUFFIX_ORANGE			:{ORANGE}Orange
-STR_SUFFIX_PINK 			:{CREAM}Pink
+STR_SUFFIX_PINK 			:{CREAM}Rose Pink
 STR_SUFFIX_RED_WHITE_BLUE   :{RED}Red/{WHITE}White/{BLUE}Blue
 STR_SUFFIX_CC				:{GREEN}Company Coloured
 
@@ -690,32 +694,6 @@ STR_REFIT_NAGOYA_RINKAI	: {WHITE}Nagoya Rinkai Railway{BLACK} Blue/White
 STR_REFIT_KOSAKA		: {WHITE}Kosaka Railway{BLACK} Red/Grey
 STR_REFIT_KAMIOKA		: {WHITE}Kamioka Railway{BLACK} Brown/Black
 STR_REFIT_KASHIMA		: {WHITE}Kashima Railway{BLACK} Black/White
-
-STR_REFIT_ED17			: {SILVER}ED17{BLACK}
-STR_REFIT_ED50			: {SILVER}ED50{BLACK}
-
-STR_REFIT_ED62_HAMA		: {WHITE}JR Freight {BLACK}"Hamamatsu Depot"
-
-STR_REFIT_ED75_GOLD	: {SILVER}ED75 {WHITE}JR East Red/Gold "Orient Saloon"
-STR_REFIT_ED75_M1	: {SILVER}ED75 {WHITE}JR Freight Red with Stripe
-STR_REFIT_ED75_M2	: {SILVER}ED75 {WHITE}JR Freight "Panda"
-STR_REFIT_ED75_M3	: {SILVER}ED75 {WHITE}JR Freight Red and White
-
-STR_REFIT_ED79_CC			: {SILVER}ED79 {BLACK}{GREEN}Company Colour{BLACK} {GOLD}(110km/h)
-STR_REFIT_ED79_RED			: {SILVER}ED79 {WHITE}JR Freight {BLACK}Red {GOLD}(110km/h)
-STR_REFIT_ED79_SINGLEARM	: {SILVER}ED79 {WHITE}JR Freight {BLACK}Red with Single Arm Pantograph {GOLD}(110km/h)
-STR_REFIT_ED79_JRF			: {SILVER}ED79 {WHITE}JR Freight {BLACK}Blue/White {GOLD}(110km/h)
-
-STR_REFIT_EF58_61	: {WHITE}JNR {BLACK}Imperial Train
-STR_REFIT_EF58_BLUE	: {WHITE}JNR {BLACK}Express Blue/Cream
-STR_REFIT_EF58_EXP_ORANGE	: {WHITE}JNR {BLACK}Experimental Blue/Orange
-STR_REFIT_EF58_EXP_GREEN	: {WHITE}JNR {BLACK}Experimental Green
-STR_REFIT_EF58_EXP_YELLOW	: {WHITE}JNR {BLACK}Experimental Blue/Yellow
-
-
-
-STR_REFIT_EF64_0        : {SILVER}EF64-0
-STR_REFIT_EF64_1000     : {SILVER}EF64-1000
 
 STR_REFIT_DD51_EXP1	: {WHITE}JR Freight {BLACK}Experimental Blue/Red
 STR_REFIT_DD51_EXP2	: {WHITE}JR Freight {BLACK}Experimental Blue/White
